--- a/imkey-core/ikc-proto/Cargo.toml
+++ b/imkey-core/ikc-proto/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-prost = "0.11.2"
-bytes = "1.3.0"
-prost-types = "0.11.2"
+prost = "=0.11.2"
+bytes = "=1.4.0"
+prost-types = "=0.11.2"
 
 [lib]
 name = "proto"
 
 [build-dependencies]
-prost-build = "0.11.4"
+prost-build = "=0.11.4"
