--- a/imkey-core/ikc-wallet/coin-bch/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-bch/Cargo.toml
@@ -11,18 +11,18 @@ ikc-common = {path = "../../ikc-common"}
 ikc-device = {path = "../../ikc-device"}
 ikc-transport = {path = "../../ikc-transport"}
 
-bch_addr = "0.1.0"
-bitcoin = "0.29.2"
-secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
-tiny-bip39 = "0.7.3"
+bch_addr = "=0.1.0"
+bitcoin = "=0.29.2"
+secp256k1 = {version ="=0.24.3", features = ["rand", "recovery"] }
+tiny-bip39 = "=0.7.3"
 #bitcoinconsensus = { version = "0.16", optional = true }
-failure = "0.1.8"
-hex = "0.4.3"
-serde = { version = "1.0.147", features = ["derive"] }
-serde_json = "1.0.89"
-bitcoin_hashes = "0.11.0"
-num-bigint = "0.4.3"
-bytes = "1.3.0"
-prost = "0.11.2"
-prost-types = "0.11.2"
+failure = "=0.1.8"
+hex = "=0.4.3"
+serde = { version = "=1.0.147", features = ["derive"] }
+serde_json = "=1.0.89"
+bitcoin_hashes = "=0.11.0"
+num-bigint = "=0.4.3"
+bytes = "=1.4.0"
+prost = "=0.11.2"
+prost-types = "=0.11.2"
 
