--- a/imkey-core/ikc-wallet/coin-bitcoin/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-bitcoin/Cargo.toml
@@ -10,13 +10,13 @@ edition = "2018"
 ikc-common = {path = "../../ikc-common"}
 ikc-device = {path = "../../ikc-device"}
 ikc-transport = {path = "../../ikc-transport"}
-bitcoin = "0.29.2"
-hex = "0.4.3"
-secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
-ring = "0.16.20"
-bitcoin_hashes = "0.11.0"
-num-bigint = "0.4.3"
-failure = "0.1.8"
-bytes = "1.3.0"
-prost = "0.11.2"
-prost-types = "0.11.2"
+bitcoin = "=0.29.2"
+hex = "=0.4.3"
+secp256k1 = {version ="=0.24.3", features = ["rand", "recovery"] }
+ring = "=0.16.20"
+bitcoin_hashes = "=0.11.0"
+num-bigint = "=0.4.3"
+failure = "=0.1.8"
+bytes = "=1.4.0"
+prost = "=0.11.2"
+prost-types = "=0.11.2"
