--- a/imkey-core/ikc-wallet/coin-ethereum/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-ethereum/Cargo.toml
@@ -10,26 +10,26 @@ edition = "2018"
 ikc-common = {path = "../../ikc-common"}
 ikc-device = {path = "../../ikc-device"}
 ikc-transport = {path = "../../ikc-transport"}
-rlp = "0.5.2"
-secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
-ethereum-types = "0.14.0"
-keccak-hash = "0.10.0"
-lazy_static = "1.4.0"
-rustc-hex = "2.1.0"
-serde_json = "1.0.89"
-serde = { version = "1.0.147", features = ["derive"] }
-serde_derive = "1.0.147"
-jsonrpc-core = "18.0.0"
-dotenv = "0.9.0"
-bitcoin = "0.29.2"
-bitcoin_hashes = "0.11.0"
-hex = "0.4.3"
-regex = "1.9.3"
-tiny-keccak = { version = "2.0.2", features = ["keccak"] }
-failure = "0.1.8"
-num-bigint = "0.4.3"
-num-traits = "0.2.15"
-num-integer = "0.1.45"
-bytes = "1.3.0"
-prost = "0.11.2"
-prost-types = "0.11.2"
+rlp = "=0.5.2"
+secp256k1 = {version ="=0.24.3", features = ["rand", "recovery"] }
+ethereum-types = "=0.14.0"
+keccak-hash = "=0.10.0"
+lazy_static = "=1.4.0"
+rustc-hex = "=2.1.0"
+serde_json = "=1.0.89"
+serde = { version = "=1.0.147", features = ["derive"] }
+serde_derive = "=1.0.147"
+jsonrpc-core = "=18.0.0"
+dotenv = "=0.9.0"
+bitcoin = "=0.29.2"
+bitcoin_hashes = "=0.11.0"
+hex = "=0.4.3"
+regex = "=1.9.3"
+tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
+failure = "=0.1.8"
+num-bigint = "=0.4.3"
+num-traits = "=0.2.15"
+num-integer = "=0.1.45"
+bytes = "=1.4.0"
+prost = "=0.11.2"
+prost-types = "=0.11.2"
