--- a/imkey-core/ikc-wallet/coin-filecoin/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-filecoin/Cargo.toml
@@ -12,32 +12,32 @@ ikc-device = {path = "../../ikc-device"}
 ikc-transport = {path = "../../ikc-transport"}
 
 
-bitcoin_hashes = "0.11.0"
-hex = "0.4.3"
-secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
-ring = "0.16.20"
-bech32 = "0.9.1"
-num-bigint = "0.4.3"
-num-traits = "0.2.15"
-num-integer = "0.1.45"
-base64 = "0.13.1"
-failure = "0.1.8"
-bytes = "1.3.0"
-prost = "0.11.2"
-prost-types = "0.11.2"
-linked-hash-map = { version = "0.5", features = ["serde_impl"] }
+bitcoin_hashes = "=0.11.0"
+hex = "=0.4.3"
+secp256k1 = {version ="=0.24.3", features = ["rand", "recovery"] }
+ring = "=0.16.20"
+bech32 = "=0.9.1"
+num-bigint = "=0.4.3"
+num-traits = "=0.2.15"
+num-integer = "=0.1.45"
+base64 = "=0.13.1"
+failure = "=0.1.8"
+bytes = "=1.4.0"
+prost = "=0.11.2"
+prost-types = "=0.11.2"
+linked-hash-map = { version = "=0.5.6", features = ["serde_impl"] }
 
-base32 = "^0.4.0"
-blake2b-rs = "0.2.0"
-serde = { version = "1.0.147", features = ["derive"] }
-serde_cbor = "0.11.1"
-serde_json = "1.0.89"
+base32 = "=0.4.0"
+blake2b-rs = "=0.2.0"
+serde = { version = "=1.0.147", features = ["derive"] }
+serde_cbor = "=0.11.1"
+serde_json = "=1.0.89"
 
-forest_vm = "0.3.0"
-forest_message = "0.6.0"
-forest_address = "0.3.0"
-forest_encoding = "0.2.0"
-forest_cid = "0.3.0"
-forest_crypto = "0.4.0"
-num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.0"}
+forest_vm = "=0.3.2"
+forest_message = "=0.6.1"
+forest_address = "=0.3.2"
+forest_encoding = "=0.2.2"
+forest_cid = "=0.3.0"
+forest_crypto = "=0.4.1"
+num_bigint_chainsafe = { package = "forest_bigint", version = "=0.1.4"}
 
