--- a/imkey-core/ikc-wallet/coin-substrate/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-substrate/Cargo.toml
@@ -10,13 +10,13 @@ edition = "2018"
 ikc-common = {path = "../../ikc-common"}
 ikc-device = {path = "../../ikc-device"}
 ikc-transport = {path = "../../ikc-transport"}
-sp-core = "7.0.0"
-failure = "0.1.8"
-hex = "0.4.3"
-prost = "0.11.2"
-prost-types = "0.11.2"
+sp-core = "=7.0.0"
+failure = "=0.1.8"
+hex = "=0.4.3"
+prost = "=0.11.2"
+prost-types = "=0.11.2"
 
 
 [dev-dependencies]
-sp-runtime = "7.0.0"
-sp-keyring = "7.0.0"
+sp-runtime = "=7.0.0"
+sp-keyring = "=7.0.0"
