--- a/imkey-core/ikc-wallet/coin-tron/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-tron/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-keccak-hash = "0.10.0"
-failure = "0.1.8"
-bitcoin = "0.29.2"
-hex = "0.4.3"
+keccak-hash = "=0.10.0"
+failure = "=0.1.8"
+bitcoin = "=0.29.2"
+hex = "=0.4.3"
 ikc-common = {path = "../../ikc-common"}
 ikc-device = {path = "../../ikc-device"}
 ikc-transport = {path = "../../ikc-transport"}
-prost = "0.11.2"
-secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
-tiny-keccak = { version = "2.0.2", features = ["keccak"] }
+prost = "=0.11.2"
+secp256k1 = {version ="=0.24.3", features = ["rand", "recovery"] }
+tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
