--- a/token-core/tcx-atom/Cargo.toml
+++ b/token-core/tcx-atom/Cargo.toml
@@ -12,9 +12,9 @@ tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
 tcx-common = { path = "../tcx-common" }
 
-bech32 = "0.9.1"
-failure = "0.1.8"
+bech32 = "=0.9.1"
+failure = "=0.1.8"
 
-prost = "0.11.2"
-bytes = "1.3.0"
-base64 = "0.13.1"
+prost = "=0.11.2"
+bytes = "=1.4.0"
+base64 = "=0.13.1"
