--- a/token-core/tcx-btc-kin/Cargo.toml
+++ b/token-core/tcx-btc-kin/Cargo.toml
@@ -11,27 +11,27 @@ tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
 tcx-common = { path = "../tcx-common" }
 
-hex = "0.4.3"
-base64 = "0.13.1"
+hex = "=0.4.3"
+base64 = "=0.13.1"
 
-bitcoin = "0.29.2"
-secp256k1 = {version ="0.24.1", features = ["rand", "recovery", "rand-std"] }
-tiny-bip39 = "0.7.3"
-bitcoin_hashes = "0.11.0"
+bitcoin = "=0.29.2"
+secp256k1 = {version ="=0.24.3", features = ["rand", "recovery", "rand-std"] }
+tiny-bip39 = "=0.7.3"
+bitcoin_hashes = "=0.11.0"
 #bitcoinconsensus = { version = "0.19.0-2", optional = true }
-serde = { version = "1.0.147", features = ["derive"] }
-serde_json = "1.0.89"
-uuid = { version = "1.2.2", features = ["serde", "v4"] }
-failure = "0.1.8"
-num-bigint = "0.4.3"
-num-traits = "0.2.15"
-num-integer = "0.1.45"
-byteorder = "1.4.3"
-bech32 = "0.9.1"
-prost = "0.11.2"
-bytes = "1.3.0"
-prost-types = "0.11.2"
-bch_addr = "0.1.0"
+serde = { version = "=1.0.147", features = ["derive"] }
+serde_json = "=1.0.89"
+uuid = { version = "=1.2.2", features = ["serde", "v4"] }
+failure = "=0.1.8"
+num-bigint = "=0.4.3"
+num-traits = "=0.2.15"
+num-integer = "=0.1.45"
+byteorder = "=1.4.3"
+bech32 = "=0.9.1"
+prost = "=0.11.2"
+bytes = "=1.4.0"
+prost-types = "=0.11.2"
+bch_addr = "=0.1.0"
 
 [dev-dependencies]
-mockall = "0.11.3"
+mockall = "=0.11.3"
