--- a/token-core/tcx-constants/Cargo.toml
+++ b/token-core/tcx-constants/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-failure = "0.1.8"
-lazy_static = "1.4.0"
-serde_json = "1.0.89"
-serde = { version = "1.0.147", features = ["derive"] }
-parking_lot = "0.12.1"
+failure = "=0.1.8"
+lazy_static = "=1.4.0"
+serde_json = "=1.0.89"
+serde = { version = "=1.0.147", features = ["derive"] }
+parking_lot = "=0.12.1"
