--- a/token-core/tcx-eos/Cargo.toml
+++ b/token-core/tcx-eos/Cargo.toml
@@ -12,10 +12,10 @@ tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
 tcx-common = {path = "../tcx-common"}
 
-failure = "0.1.8"
-regex = "1.9.3"
-bitcoin = "0.29.2"
+failure = "=0.1.8"
+regex = "=1.9.3"
+bitcoin = "=0.29.2"
 
-prost = "0.11.2"
-bytes = "1.3.0"
-base64 = "0.13.1"
+prost = "=0.11.2"
+bytes = "=1.4.0"
+base64 = "=0.13.1"
