--- a/token-core/tcx-eth2/Cargo.toml
+++ b/token-core/tcx-eth2/Cargo.toml
@@ -13,12 +13,12 @@ tcx-constants = { path = "../tcx-constants" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-crypto = { path = "../tcx-crypto" }
 
-prost = "0.11.2"
-bytes = "1.3.0"
-lazy_static = "1.4.0"
-prost-types = "0.11.2"
-failure = "0.1.8"
-regex = "1.9.3"
-keccak-hash = "0.10.0"
-ssz_rs = "0.8.0"
-ssz_rs_derive = "0.8.0"
+prost = "=0.11.2"
+bytes = "=1.4.0"
+lazy_static = "=1.4.0"
+prost-types = "=0.11.2"
+failure = "=0.1.8"
+regex = "=1.9.3"
+keccak-hash = "=0.10.0"
+ssz_rs = "=0.8.0"
+ssz_rs_derive = "=0.8.0"
