--- a/token-core/tcx-filecoin/Cargo.toml
+++ b/token-core/tcx-filecoin/Cargo.toml
@@ -13,24 +13,24 @@ tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
 tcx-common = { path = "../tcx-common" }
 
-prost = "0.11.2"
-bytes = "1.3.0"
-blake2b-rs = "0.2.0"
-failure = "0.1.8"
-byteorder = "1.4.3"
-base32 = "^0.4.0"
-serde = { version = "1.0.147", features = ["derive"] }
-serde_cbor = "0.11.1"
-serde_json = "1.0.89"
-base64 = "0.13.1"
+prost = "=0.11.2"
+bytes = "=1.4.0"
+blake2b-rs = "=0.2.0"
+failure = "=0.1.8"
+byteorder = "=1.4.3"
+base32 = "=0.4.0"
+serde = { version = "=1.0.147", features = ["derive"] }
+serde_cbor = "=0.11.1"
+serde_json = "=1.0.89"
+base64 = "=0.13.1"
 
 num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.0"}
 
-lazy_static = "1.4.0"
+lazy_static = "=1.4.0"
 
-forest_vm = "0.3.2"
-forest_message = "0.7.2"
-forest_address = "0.3.2"
-forest_encoding = "0.2.2"
-forest_cid = "0.3.0"
+forest_vm = "=0.3.2"
+forest_message = "=0.7.2"
+forest_address = "=0.3.2"
+forest_encoding = "=0.2.2"
+forest_cid = "=0.3.0"
 forest_crypto = "0.5.3"
