--- a/token-core/tcx-libs/secp256k1/Cargo.toml
+++ b/token-core/tcx-libs/secp256k1/Cargo.toml
@@ -36,7 +36,7 @@ endomorphism = []
 lowmemory = []
 
 [dev-dependencies]
-rand = "0.8.5"
+rand = "=0.8.5"
 rand_core = "0.6.4"
 serde_test = "1.0"
 
