--- a/token-core/tcx-migration/Cargo.toml
+++ b/token-core/tcx-migration/Cargo.toml
@@ -24,19 +24,19 @@ tcx-tron = { path = "../tcx-tron" }
 tcx-eth = { path = "../tcx-eth" }
 tcx-common = { path = "../tcx-common" }
 
-prost = "0.11.2"
-bytes = "1.3.0"
-prost-types = "0.11.2"
+prost = "=0.11.2"
+bytes = "=1.4.0"
+prost-types = "=0.11.2"
 
-libc = "0.2.138"
-log = "0.4.17"
-serde_json = "1.0.89"
-serde = { version = "1.0.147", features = ["derive"] }
-failure = "0.1.8"
-lazy_static = "1.4.0"
-hex = "0.4.3"
-base64 = "0.13.1"
-base58 = "0.2.0"
-parking_lot = "0.12.1"
-ethers = "2.0.3"
-uuid = { version = "1.2.2", features = ["serde", "v4"] }
+libc = "=0.2.140"
+log = "=0.4.17"
+serde_json = "=1.0.89"
+serde = { version = "=1.0.147", features = ["derive"] }
+failure = "=0.1.8"
+lazy_static = "=1.4.0"
+hex = "=0.4.3"
+base64 = "=0.13.1"
+base58 = "=0.2.0"
+parking_lot = "=0.12.1"
+ethers = "=2.0.3"
+uuid = { version = "=1.2.2", features = ["serde", "v4"] }
