--- a/token-core/tcx-proto/Cargo.toml
+++ b/token-core/tcx-proto/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-prost = "0.11.2"
-bytes = "1.3.0"
-prost-types = "0.11.2"
+prost = "=0.11.2"
+bytes = "=1.4.0"
+prost-types = "=0.11.2"
 
 [lib]
 name = "tcx_proto"
@@ -17,4 +17,4 @@ build = "build.rs"
 
 
 [build-dependencies]
-prost-build = "0.11.4"
+prost-build = "=0.11.4"
