--- a/token-core/tcx-tezos/Cargo.toml
+++ b/token-core/tcx-tezos/Cargo.toml
@@ -13,12 +13,12 @@ tcx-primitive = { path = "../tcx-primitive" }
 tcx-crypto = { path = "../tcx-crypto" }
 tcx-common = { path = "../tcx-common" }
 
-failure = "0.1.8"
-blake2b_simd = "1.0.0"
-hex = "0.4.3"
-bitcoin = "0.29.2"
-ring = "0.16.20"
+failure = "=0.1.8"
+blake2b_simd = "=1.0.1"
+hex = "=0.4.3"
+bitcoin = "=0.29.2"
+ring = "=0.16.20"
 
-prost = "0.11.2"
-bytes = "1.3.0"
-prost-types = "0.11.2"
+prost = "=0.11.2"
+bytes = "=1.4.0"
+prost-types = "=0.11.2"
