--- a/token-core/tcx/Cargo.toml
+++ b/token-core/tcx/Cargo.toml
@@ -24,32 +24,32 @@ tcx-common = { path = "../tcx-common" }
 tcx-migration = { path = "../tcx-migration" }
 #zksync-crypto = { git="https://github.com/consenlabs/zksync", branch="hotfix/compatible_with_tcx" }
 
-prost = "0.11.2"
-bytes = "1.3.0"
-prost-types = "0.11.2"
+prost = "=0.11.2"
+bytes = "=1.4.0"
+prost-types = "=0.11.2"
 
-libc = "0.2.138"
-log = "0.4.17"
-serde_json = "1.0.89"
-serde = { version = "1.0.147", features = ["derive"] }
-failure = "0.1.8"
-lazy_static = "1.4.0"
-hex = "0.4.3"
-base64 = "0.13.1"
-base58 = "0.2.0"
-parking_lot = "0.12.1"
-ethers = "2.0.3"
+libc = "=0.2.140"
+log = "=0.4.17"
+serde_json = "=1.0.89"
+serde = { version = "=1.0.147", features = ["derive"] }
+failure = "=0.1.8"
+lazy_static = "=1.4.0"
+hex = "=0.4.3"
+base64 = "=0.13.1"
+base58 = "=0.2.0"
+parking_lot = "=0.12.1"
+ethers = "=2.0.3"
 
-strum = { version = "0.25", features = ["derive"] }
+strum = { version = "=0.25.0", features = ["derive"] }
 
 [lib]
 name = "tcx"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-prost-build = "0.11.4"
+prost-build = "=0.11.4"
 
 [dev-dependencies]
-serial_test = "2.0.0"
-sp-core = "7.0.0"
-sp-runtime = "7.0.0"
+serial_test = "=2.0.0"
+sp-core = "=7.0.0"
+sp-runtime = "=7.0.0"
